styles/oreckz.css
html {
font-size: 14px; /* px means "pixels": the base font size is now 10 pixels high */
font-family: "Open Sans", sans-serif; /* this should be the rest of the output you got from Google Fonts */
background-color: blueviolet;
background-color:rgb(0, 0, 0);
background-image: url("../images/bg1.jpg");
background-size: cover;
background-repeat: no-repeat;
background-position: center;
background-attachment: fixed;
}

body {
border: 1px solid black;/*may need to remove, makes noticeable space near dropdown icon if there's no header border colour*/
margin: auto;
max-width: 85%;
min-height: 100vh;
display: flex;
flex-direction: column;
background-color: black;
border-radius: 8px; /*rounds edges*/
color: white;
}

main{
padding: 9rem; /*keeps elements from going under heading*/
text-align: center;
display: inline-block;
}

h1.pageheading{
text-align: center;
padding-bottom: 20px;
}


a.a1, a.a2, a.a3, a.a4, a.a5, a.a6, a.a7, a.a8{
margin-top: 0.5em;
margin-bottom: 0.5em; /*allows you to create space between articles in the specified direction of margin*/
margin-left: 0.5em;
margin-right: 0.5em;
}

div.dropdown{
position: relative;
display: inline-block;
}

nav.intPLinks ul {
padding: 0;
/*no need to use display:flex as I'm controlling button spacing with margin-direction:[number]em*/
list-style-type: none;
flex: 2;
display:block;/*using display:block keeps buttons close together, using display:flex pushes them apart*/
text-align: center;
}

nav.intPLinks li {
display: inline-block;
text-align: center;
flex: 1;
}

nav.intPLinks li a {
text-decoration: none;
color: white;
}

a{
text-decoration: none;
color: white;
}

nav.extPLinks ul {
padding: 0;
list-style-type: none;
flex: 2;
}

img.fbLogo, img.igLogo, img.xLogo, img.tiktokLogo{
height: 30px;
width:30px;
}

a.dropdbtn, a.pageNav1, a.pageNav2, a.pageNav3 {
background-color: #74837c;
color: white;
padding: 10px;
font-size: 16px;
border: none;
border-radius: 12px;
cursor: pointer;
text-shadow: 2px 2px 2px #000000;
margin-left: 1.5em;/*controls spacing in desired direction*/
margin-right: 1.5em;
}

div.dropdown-links{
display:none;
position: absolute;
background-color: #1822a5;
 min-width: 160px;
}

div.dropdown-links a{
color: rgb(150, 19, 19);
padding: 12px 16px;
text-decoration: none;
display:block;
}

div.dropdown-links a:hover {
background-color: #22e182;
}

div.dropdown:hover div.dropdown-links{
display: block;
border-radius: 8px;
}

div.dropdown:hover a.dropdbtn{
background-color: rgb(150, 52, 52);
}

a.a1, a.a2, a.a3, a.a4, a.a5, a.a6, a.a7, a.a8{
border-radius: 8px;
flex: 200px; /*this is its default size, will shrink along with window to fit space available, it also keeps things in perfect alignment and size*/
text-shadow: 2px 2px 2px #000000;   
background-color: rgb(121, 119, 116);
padding: 40px 10px;/*used to resize background image allowing enough content to be shown.*/
}

a.a1:active, a.a2:active, a.a3:active, a.a4:active, a.a5:active, a.a6:active, a.a7:active, a.a8:active{
animation: shake 0.4s ease-out; /*animation to trigger upon click*/
}

/* Keyframes to define the animation*/
@keyframes shake {
    0% {
        transform: skewX(-4deg);/*first shake measurement to the left*/
    }

    25% {
        transform: skewX(4deg);/*second shake measurement to the right*/
    }

    50% {
        transform: skewX(-4deg);/*3rd shake measurement to the left*/
    }

    75% {
        transform: skewX(4deg);/*4th shake measurement to the right*/
    }

}

a.a1:hover, a.a2:hover, a.a3:hover, a.a4:hover, a.a5:hover, a.a6:hover, a.a7:hover, a.a8:hover {
color: yellow;
box-shadow: 0 5px yellow;
transform: translateY(2px);
text-shadow: 2px 2px 2px #000000;   
}

a.a1{/*Fighting/Martial arts genre*/
background-image: url("../images/fighting-martial-arts.webp");
background-size:cover;
background-position:center; /*in case an alignment is needed*/
background-repeat: no-repeat;
background-attachment: scroll;
}

a.a2{/*Battle/Action genre*/
background-image: url("../images/battle-action.jpg");
background-size:cover;
/*background-position:; /*in case an alignment is needed*/
background-repeat: no-repeat;
background-attachment: scroll;
}

a.a3{/*Comedy genre*/
background-image: url("../images/comedy.jpg");
background-size:cover;
background-position-y: 20%;
background-repeat: no-repeat;
background-attachment: scroll;
}

a.a4{/*Sports genre*/
background-image: url("../images/sports.jpg");
background-size:cover;
background-position-y: 70%; /*to be specific about the part of background image I wish to show*/
background-repeat: no-repeat;
background-attachment: scroll;
}

a.a5{/*Sci-Fi/Fantasy genre*/
background-image: url("../images/sci-fi-fantasy.jpg");
background-size:cover;
background-position-y: 70%; /*to be specific about the part of background image I wish to show*/
background-repeat: no-repeat;
background-attachment: scroll;
}

a.a6{/*Horro/Supernatural genre*/
background-image: url("../images/horror-supernatural.jpg");
background-size:cover;
background-position-y: 25%; /*to be specific about the part of background image I wish to show*/
background-repeat: no-repeat;
background-attachment: scroll;
}

a.a7{/*Drama genre*/
background-image: url("../images/drama.jpg");
background-size:cover;
background-position-y: 40%; /*to be specific about the part of background image I wish to show*/
background-repeat: no-repeat;
background-attachment: scroll;
}

a.a8{/*Music genre*/
background-image: url("../images/music.jpg");
background-size:cover;
background-position-y: 50%; /*to be specific about the part of background image I wish to show*/
background-repeat: no-repeat;
}

section{
display: flex;
flex-direction:row; /*aligns elements inside section (articles in this case) as rows as default*/
flex-wrap: wrap; /*allows articles to maintain its form as the windows size changes*/
border-radius: 8px;
}

header{
top: 0;
position: fixed; /*If I change to sticky, will need to alter width to 100%. Absolute is fine on its own.*/
width: 85%;
background-color: black;
padding-bottom: 14px;
/*border: /*solid 1px white; in case I want to add a border colour around the header*/ 
}

footer{
bottom: 0;
text-align: center;
position: relative; /*can remove this or change to static if I want footer to remain at bottom and unseen unless I scroll, will need to adjust width to 100% if so*/
width: 100%; /*will need to change to 100% if position is removed or changed to static*/
background-color: red;
color: black;
}

header, footer{
border-radius: 8px;
}

